<?xml version="1.0" encoding="utf-8"?><!--
  ~ Last Launcher
  ~ Copyright (C) 2019 Shubham Tyagi
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="vertical">


    <TextView
        android:id="@+id/settings_fonts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/fonts"

        android:textSize="20sp" />

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="#DEDEDE"
        android:foregroundGravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/settings_themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:text="@string/themes"

        android:textSize="20sp"/>

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="#DEDEDE"
        android:foregroundGravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/settings_primary_color"
        android:layout_width="match_parent"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content"

        android:text="@string/set_to_primary_colors"
        android:textSize="20sp"/>
    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="#DEDEDE"
        android:foregroundGravity="center_vertical|center_horizontal" />
    <TextView
        android:id="@+id/settings_reset_to_defaults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"

        android:gravity="center"
        android:text="@string/reset_to_default_settings"
        android:textSize="20sp"/>
    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="#DEDEDE"
        android:foregroundGravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/settings_backup"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:text="@string/backup_restore"
        android:textSize="20sp"/>
    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="#DEDEDE"
        android:foregroundGravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/settings_setup_random_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"

        android:text="@string/random_colors"
        android:textSize="20sp"/>

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="#DEDEDE"
        android:foregroundGravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/settings_hidden_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"

        android:text="@string/hidden_apps"
        android:textSize="20sp"/>
    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="#DEDEDE"
        android:foregroundGravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/settings_freezed_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center"

        android:text="@string/freezed_apps"
        android:textSize="20sp"/>
</LinearLayout>