<?xml version="1.0" encoding="utf-8"?><!--
  ~ Last Launcher
  ~ Copyright (C) 2019 Shubham Tyagi
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/text_color_sniffer_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/color_sniffer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/switch_color_sniffer_on_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="20sp" />
    </LinearLayout>


    <View
        android:layout_width="210dp"
        android:layout_height="1dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="#DEDEDE"
        android:foregroundGravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/color_sniffer_clipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/from_clipboard"
        android:textSize="20sp" />

    <View
        android:layout_width="210dp"
        android:layout_height="1dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="#DEDEDE"
        android:foregroundGravity="center_vertical|center_horizontal" />

    <TextView
        android:id="@+id/color_sniffer_external_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/from_color_sniffer_app"
        android:textSize="20sp" />


</LinearLayout>